--- a/Login.css
+++ b/Login.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'PT Sans Narrow', sans-serif;
-    background-color: rgb(20, 156, 210)
+    background-color: black;
 }
 label,input,a{
     display: block;
